plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.10'
    id 'io.spring.dependency-management' version '1.1.7'
}

allprojects {
    group = 'com.goti'
    version = '0.0.1-SNAPSHOT'
    description = 'KT-TECHUP_Integration_Goti_project'

    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21

    repositories {
        mavenCentral()
    }

    tasks.withType(JavaCompile) {
        options.annotationProcessorPath = configurations.annotationProcessor
    }
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'io.spring.dependency-management'
    apply plugin: 'org.springframework.boot'


    dependencies {
        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'

        testImplementation 'org.springframework.boot:spring-boot-starter-test'
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

        /* QueryDSL*/
        implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'

        annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jakarta'
        annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
        annotationProcessor 'jakarta.persistence:jakarta.persistence-api'

        /* Test Module Lombok */
        testCompileOnly 'org.projectlombok:lombok'
        testAnnotationProcessor 'org.projectlombok:lombok'
    }

    tasks.named('test') {
        useJUnitPlatform()
        workingDir = rootProject.projectDir
    }

    // -Pmsa: bootJar 활성화 (도메인 모듈을 독립 서비스로 빌드)
    // jar는 항상 활성화 (모듈 간 의존성 해결에 필수: ticketing → stadium 등)
    plugins.withId('org.springframework.boot') {
        def msa = project.hasProperty('msa')
        tasks.named('bootJar') { enabled = msa }
        tasks.named('jar') { enabled = true }
    }
}